fix z-index bug

--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -12,6 +12,7 @@
   letter-spacing: 0em;
   color: #BDBDBD;
   padding-bottom: 30px;
+	z-index: 10;
 }
 
 .text h2 {
